# tower-tumbler

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.cargo/: config.toml
.husky/hooks/: pre-commit  pre-push
docs/: AI_DEVELOPMENT_GUIDE.md  BEVY_COMPATIBILITY.md  QUICK_REFERENCE.md
src/: lib.rs  main.rs
src/core/: game.rs  mod.rs  scoring.rs
src/input/: bridge.rs  calibration.rs  keyboard.rs  mod.rs  tilt.rs
src/physics/: bodies.rs  mod.rs  world.rs
src/ui/: hud.rs  menu.rs  mod.rs
utils/: README.md  build-release.sh  log-server.py  start-log-server.sh  start-trunk-server.sh
www/: console-logger.js  fix-wasm-init.js
