[package]
name = "tower-tumbler"
version = "0.1.0"
edition = "2021"
description = "A physics-based stacking game with device tilt controls"
license = "MIT"
repository = "https://github.com/xdanger/tower-tumbler"
authors = ["xdanger <xdanger@example.com>"]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tower-tumbler"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_state",
    "webgl2",
    "png"
] }
bevy_rapier2d = { version = "0.27", features = ["wasm-bindgen", "debug-render-2d"] }
rand = "0.9"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "DeviceOrientationEvent",
    "DeviceMotionEvent",
    "CustomEvent",
    "EventTarget"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.0", features = ["js"] }
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[profile.release-wasm-size]
inherits = "release"
opt-level = "z"
strip = true


